fix: remove align-self property from Tag component styles

--- a/src/components/Tag/Tag.scss
+++ b/src/components/Tag/Tag.scss
@@ -11,7 +11,6 @@ $block: '.#{$ns}tag';
     display: inline-block;
     border-radius: 20px;
     padding: 2px 12px;
-    align-self: flex-start;
 
     &_without-margin-bottom {
         margin-bottom: 0;
